backend/error.txt
file:///C:/Users/Guest%20User/Desktop/LearnReact/backend/routes/writing.route.js:1
import { getAllWritings, createWriting, updateWriting, deleteWriting, getWritingById, getWritingExam, submitWriting, getSubmissions, getSubmissionById, scoreSubmission, regenerateWritingId, scoreSubmissionAI, uploadImage } from '../controllers/writing.controller.js';
                                                                                                                                                                                                                 ^^^^^^^^^^^
SyntaxError: The requested module '../controllers/writing.controller.js' does not provide an export named 'uploadImage'
    at #asyncInstantiate (node:internal/modules/esm/module_job:302:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:405:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:660:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.13.0
